BaSP-W04-2023: added media query and fixed all overflow mirrors

--- a/Week-04/css/aside.css
+++ b/Week-04/css/aside.css
@@ -1,18 +1,27 @@
 aside{
     display: none;
     flex-direction: column;
-    position: fixed;
+    position: sticky;
+    top: 0;
     align-items: center;
     background-color: #FFFFFF;
     height: 100vh;
     width: 100vw;
     text-decoration: none; 
 }
+.elemento {
+    display: none;
+}
 .sidebar-images {
     width: 1.2rem;
 }
 .rr-logo {
     order: 1;
+    border: 1px solid #AACE9B;
+    margin-top: 20px;
+}
+.rr-logo img {
+    width: 65px;
 }
 .burger-menu {
     align-self: baseline;
@@ -27,14 +36,111 @@ aside{
     align-items: center;
     width: 5rem;
     height: 1.5rem;
-    background-color: #373867;
-    padding: 0.5rem 1rem;
+    background-color: #EBECF0;
+    padding: 1.5rem 2.9rem;
     margin: 20px 0px;
     -webkit-text-stroke: 0.5px #AACE9B;
     font-weight: 400;
     text-transform: uppercase;
     border-radius: 5px;
 }
-.menu-nav-a {
-    color: #F7FBF5;
+.menu-nav li a {
+    color: #373867;
+}
+.menu-nav li:first-child {
+    background-color: #373867;
+}
+.menu-nav li:first-child a {
+    color: #EBECF0;
+}
+.menu-nav li:last-child {
+    display: none;
+}
+.other-options {
+    display: none;
+}
+.other-opt-ul {
+    display: none;
+}
+.title-side-mobile {
+    order: 1;
+    color:#34646F;
+    font-size: 15px;
+    margin-top: 20px;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+.social-nav-img {
+    order: 1;
+    align-self: flex-end;
+    margin-right: 20px;
+}
+.social-nav-img img {
+    width: 30px;
+    margin-top: 15px;
+    margin-left: 10px;
+}
+.social-links li a{
+    color: #373867;
+    font-size: 10px;
+    font-weight: 700;
+}
+.sidebar-images {
+    width: 15px;
+    margin-right: 5px;
+}
+@media screen and (min-width: 480px) {
+    aside {
+    display: flex;
+    width: 20%;
+    background-color: #AACE9B;
+    justify-content: space-around;
+}
+    .elemento {
+    display: inline;
+}
+.sidebar-images {
+    width: 1.2rem;
+    margin-left: 0.2rem;
+}
+.rr-logo {
+    order: -1;
+    border: 1px solid #AACE9B;
+}
+.burger-menu {
+    display: none;
+}
+.menu-nav li {
+    display: flex;
+    font-size: 15px;
+    justify-content: center;
+    align-items: center;
+    width: 5rem;
+    padding: 0.7rem 2.6rem;
+    height: 2.3rem;
+}
+.menu-nav li a {
+    width: 3.6rem;
+}
+.menu-nav li:first-child a {
+    width: 2.7rem;
+}
+.menu-nav li:last-child {
+    display: flex;
+}
+.other-options {
+    display: inline;
+    font-size: 0.7rem;
+    text-transform: uppercase;
+}
+.other-opt-ul {
+    display: inline;
+    font-size: 0.7rem;
+}
+.social-nav-img {
+    display: none;
+}
+.title-side-mobile {
+    display: none;
+}
 }
