--- a/Week-04/css/footer.css
+++ b/Week-04/css/footer.css
@@ -4,7 +4,8 @@ footer{
     background-color: #373867;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 100%;
+    height: 8vh;
 }
 .social-images {
     display: flex;
