--- a/Week-04/css/main.css
+++ b/Week-04/css/main.css
@@ -1,6 +1,7 @@
 .conteiner-section-1 {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .conteiner-section-1 .title-main-reason {
     color: #373867;
@@ -12,10 +13,9 @@
     margin-top: 8vh;
 }
 .conteiner-section-1 img {
-    width: 80vw;
+    width: 80%;
     background-color: rgb(255, 255, 255);
     order: 1;
-    margin-left: 8vw;
 }
 .body-mecenas {
     order: 2;
@@ -35,8 +35,9 @@
     background-image: url(../img/how-can-we-help-you-img.png);
     background-repeat: no-repeat;
     background-position: center top;
-    justify-content: center;
+    justify-content: space-around;
     align-content: center;
+    height: 100vh;
 }
 .how-can-we-help-you h2{
     margin-top: 10vh;
@@ -49,8 +50,6 @@
 .sub-titles {
     display: flex;
     flex-direction: column;
-    flex-grow: 0;
-    padding-bottom: 12rem;
 }
 .sub-titles li {
     display: flex;
@@ -82,6 +81,7 @@
 .contact-form {
     display: flex;
     flex-flow: column wrap;
+    align-items: center;
 }
 .contact-form img {
     width: 20px;
@@ -109,14 +109,13 @@
     font-weight: 600;
     border-radius: 17px;
 }
-
 .all-form {
-    margin-left: 7vw;
+    width: 80%;
 }
 .all-form input {
     height: 35px;
     margin-bottom: 20px;
-    padding: 0 1.2rem;
+    padding: 0 1rem;
     border-radius: 17px;
     font-size: 0.87rem;
     border: 2px solid #373867;
@@ -143,7 +142,7 @@
     height: 2rem;
 }
 .message {
-    margin: 50px 0 15px 2rem;
+    margin: 50px 0 15px 0rem;
     font-size: 0.87rem;
     font-weight: 700;
 }
@@ -155,7 +154,6 @@
     font-size: 0.87rem;
     border: 2px solid #E0E0E0;
     width: 80%;
-    margin: 0 8vw;
     height: 7rem;
 }
 .text-area {
@@ -194,6 +192,7 @@ input[type=reset] {
 .our-history {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .our-history-img {
     display: flex;
@@ -226,14 +225,17 @@ input[type=reset] {
     background-repeat: no-repeat;
     background-position: center top;
     background-size: cover;
-    padding: 8rem 2.7rem 8rem 1.5rem;
+    padding: 8rem 2.7rem;
     line-height: 1.5rem;
-    margin: 0rem 0rem;
-    height: 50vh;
+    margin: 0rem;
+    height: 100vh;
+    display: flex;
+    align-items: center;
 }
 .activities {
     display: flex;
     align-items: center;
+    justify-content: center;
     font-style: normal;
     font-weight: 700;
     font-size: 2rem;
@@ -243,6 +245,10 @@ input[type=reset] {
     color: #373867;
 }
 .activities-article {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     font-style: normal;
     font-weight: 700;
     font-size: 2rem;
@@ -310,4 +316,13 @@ input[type=reset] {
 .activities-conteiner{
     display: flex;
     flex-direction: column;
+}
+@media screen and (min-width: 480px){
+.sub-titles li {
+}
+}
+@media screen and (min-width: 1024px) {
+    .sub-titles {
+        flex-direction: row;
+    }
 }
